Shading changes in the viewport shading popup menu require movement in the 3D viewport to take affect. #84717

Closed
opened 2021-01-14 17:45:23 +01:00 by claas eicke · 48 comments

System Information
Operating system: Darwin-19.6.0-x86_64-i386-64bit 64 Bits
Graphics card: NVIDIA GeForce GTX 775M OpenGL Engine NVIDIA Corporation 4.1 NVIDIA-14.0.32 355.11.11.10.10.143

Blender Version
Bisect points to 0f95f51361 being the responsible commit.
Worked: 2cd091e9c7 and earlier.

Short description of error
Changes in the viewport shading only updates after I zoomed, panned, rotated in the 3d viewport.
For example turning on Cavity, or switching to MatCap etc. EEVEE's AOV passes are affected as well.

Exact steps for others to reproduce the error
Change setting in viewport shading such as turn on MatCap
Rotate pan zoom in 3d view port
Now you can see the change

**System Information** Operating system: Darwin-19.6.0-x86_64-i386-64bit 64 Bits Graphics card: NVIDIA GeForce GTX 775M OpenGL Engine NVIDIA Corporation 4.1 NVIDIA-14.0.32 355.11.11.10.10.143 **Blender Version** Bisect points to 0f95f51361 being the responsible commit. Worked: 2cd091e9c7 and earlier. **Short description of error** Changes in the viewport shading only updates after I zoomed, panned, rotated in the 3d viewport. For example turning on Cavity, or switching to MatCap etc. EEVEE's AOV passes are affected as well. **Exact steps for others to reproduce the error** Change setting in viewport shading such as turn on MatCap Rotate pan zoom in 3d view port Now you can see the change
Author

Added subscriber: @ClaasKuhnen

Added subscriber: @ClaasKuhnen

#85140 was marked as duplicate of this issue

#85140 was marked as duplicate of this issue

#85106 was marked as duplicate of this issue

#85106 was marked as duplicate of this issue

#84976 was marked as duplicate of this issue

#84976 was marked as duplicate of this issue

#84941 was marked as duplicate of this issue

#84941 was marked as duplicate of this issue

#84942 was marked as duplicate of this issue

#84942 was marked as duplicate of this issue

#84934 was marked as duplicate of this issue

#84934 was marked as duplicate of this issue

#84924 was marked as duplicate of this issue

#84924 was marked as duplicate of this issue

#84922 was marked as duplicate of this issue

#84922 was marked as duplicate of this issue

#84814 was marked as duplicate of this issue

#84814 was marked as duplicate of this issue

#84744 was marked as duplicate of this issue

#84744 was marked as duplicate of this issue

#84740 was marked as duplicate of this issue

#84740 was marked as duplicate of this issue
Member

Added subscriber: @EAW

Added subscriber: @EAW
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Thank you for the report. I can reproduce it in both 2.92 Beta and 2.93 Alpha. I noticed it also occurs when switching EEVEE AOVs .
The issue is present when running blender_debug_gpu.cmd blender_debug_gpu_glitchworkaround.cmd blender_debug_log.cmd and blender_factory_startup.cmd. However, nothing out of the ordinary is reported in the debug output on Release builds.
blender_debug_output.txt

blender_system_info.txt

2.92.0 Beta, branch: master, commit date: 2021-01-13 16:33, hash: 5d826866a3, type: Release
2.93.0 Alpha, branch: master, commit date: 2021-01-14 17:11, hash: 33a558bf21, type: Release

Tested using:
OS: Windows-10-10.0.19041.630-SP0 64 Bits
GPU: GeForce GTX 470/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.35
CPU: i7-950 @3.07 GHz SSE2 SSE3 SSE41

Thank you for the report. I can reproduce it in both 2.92 Beta and 2.93 Alpha. I noticed it also occurs when switching EEVEE AOVs . The issue is present when running `blender_debug_gpu.cmd` `blender_debug_gpu_glitchworkaround.cmd` `blender_debug_log.cmd` and `blender_factory_startup.cmd`. However, nothing out of the ordinary is reported in the debug output on Release builds. [blender_debug_output.txt](https://archive.blender.org/developer/F9580065/blender_debug_output.txt) [blender_system_info.txt](https://archive.blender.org/developer/F9580066/blender_system_info.txt) 2.92.0 Beta, branch: master, commit date: 2021-01-13 16:33, hash: 5d826866a3d8, type: Release 2.93.0 Alpha, branch: master, commit date: 2021-01-14 17:11, hash: 33a558bf2157, type: Release Tested using: OS: Windows-10-10.0.19041.630-SP0 64 Bits GPU: GeForce GTX 470/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.35 CPU: i7-950 @3.07 GHz SSE2 SSE3 SSE41
Member

Added subscribers: @TheCharacterhero-4, @rboxman, @zanqdo

Added subscribers: @TheCharacterhero-4, @rboxman, @zanqdo
Member

Bisecting...

Bisecting...
Member

Added subscriber: @Sergey

Added subscriber: @Sergey
Member

Bisecting points to 0f95f51361. Paging Dr. @Sergey

Bisecting points to 0f95f51361. Paging Dr. @Sergey
Evan Wilson changed title from Changes in the viewport shading updates only after I zoomed, panned, rotated in the 3d viewport. to Shading changes in the viewport shading popup menu require movement in the 3D viewport to take affect. 2021-01-15 10:17:04 +01:00
Clément Foucault was assigned by Sergey Sharybin 2021-01-15 12:07:28 +01:00

Added subscribers: @fclem, @Jeroen-Bakker

Added subscribers: @fclem, @Jeroen-Bakker

This is caused by ID_SCR added to the ID_TYPE_IS_COW, making it so screens are not treated as something what is covered by a dependency graph's copy-on-write. This is correct, since a dependency graph does not keep track of interface data (screens, layouts, window managers, ...). The change made it so change of shading in viewport does no longer call DEG_id_tag_update() on the screen ID.

I do not see anything functional what dependency graph will do in this case: there are no screen IDs in it, so dependency graph was always "ignoring" this tag, before and after the fix for drivers.

What I did for testing is:

  • Set breakpoint to rna_property_update
  • Change shading to matcap (which triggers breakpoint)
  • Set breakpoint to workbench_opaque_cache_init
  • Step a bit and see that use_matcap is set to truth.

So it seems that RNA update does cause draw manager to do a redraw. By then it is unclear to me why new picture does not appear in viewport.

@fclem, @Jeroen-Bakker, help! :)

Edit: File I used for testing: F9580265

This is caused by `ID_SCR` added to the `ID_TYPE_IS_COW`, making it so screens are not treated as something what is covered by a dependency graph's copy-on-write. This is correct, since a dependency graph does not keep track of interface data (screens, layouts, window managers, ...). The change made it so change of shading in viewport does no longer call `DEG_id_tag_update()` on the screen ID. I do not see anything functional what dependency graph will do in this case: there are no screen IDs in it, so dependency graph was always "ignoring" this tag, before and after the fix for drivers. What I did for testing is: - Set breakpoint to `rna_property_update` - Change shading to matcap (which triggers breakpoint) - Set breakpoint to `workbench_opaque_cache_init` - Step a bit and see that `use_matcap` is set to truth. So it seems that RNA update does cause draw manager to do a redraw. By then it is unclear to me why new picture does not appear in viewport. @fclem, @Jeroen-Bakker, help! :) Edit: File I used for testing: [F9580265](https://archive.blender.org/developer/F9580265/T84717.blend)

Added subscribers: @PaoloCabaleiro, @rjg

Added subscribers: @PaoloCabaleiro, @rjg
Member

Its not only matcaps, all viewport settings do the same

Its not only matcaps, all viewport settings do the same

Indeed, for instance the switching between Material Preview and Rendered as in the merged ticket doesn't work either. Since this quite thoroughly breaks UI interaction from a user's point of view, I think this should be a high priority bug.

Indeed, for instance the switching between *Material Preview* and *Rendered* as in the merged ticket doesn't work either. Since this quite thoroughly breaks UI interaction from a user's point of view, I think this should be a high priority bug.
Member

Added subscriber: @Leroy-Xie

Added subscriber: @Leroy-Xie

Added subscriber: @lowpolysaac

Added subscriber: @lowpolysaac

Added subscriber: @frew

Added subscriber: @frew

Added subscriber: @borschberry

Added subscriber: @borschberry

Added subscriber: @JustinWebster

Added subscriber: @JustinWebster

Notice this issue last night, thought it was due to a addon breaking things perhaps, but yeah isn't.

Notice this issue last night, thought it was due to a addon breaking things perhaps, but yeah isn't.

Added subscriber: @vr_sebas

Added subscriber: @vr_sebas

Added subscriber: @Phigon

Added subscriber: @Phigon
Member

Added subscribers: @BrentPatterson, @Diogo_Valadares

Added subscribers: @BrentPatterson, @Diogo_Valadares

Added subscriber: @Vyach

Added subscriber: @Vyach

Added subscriber: @Rodrigo_S.T

Added subscriber: @Rodrigo_S.T

Added subscriber: @ChuckOcheret

Added subscriber: @ChuckOcheret

Added subscriber: @DavidKerdudo

Added subscriber: @DavidKerdudo

Added subscriber: @jackiejake

Added subscriber: @jackiejake

Added subscribers: @JulienKaspar, @filedescriptor

Added subscribers: @JulienKaspar, @filedescriptor

I'm raising the priority of this ticket, as this basically breaks user interaction and affects Blender 2.92.

I'm raising the priority of this ticket, as this basically breaks user interaction and affects Blender 2.92.

Added subscriber: @brecht

Added subscriber: @brecht

@Sergey, this issue is much more important than the bugfix that caused it, I suggest reverting your fix for now.

@Sergey, this issue is much more important than the bugfix that caused it, I suggest reverting your fix for now.

This issue was referenced by cd24712c2c

This issue was referenced by cd24712c2c51ab753369f7cae8c43c38115bd59f

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Added subscriber: @MassimilianoPuliero

Added subscriber: @MassimilianoPuliero

This issue was referenced by 133966423a

This issue was referenced by 133966423aa61f614541ef910c34aea3d2275057

@Sergey, I had to revert 76fd41e9db as well, leaving that by itself is crashing the Cycles tests.

@Sergey, I had to revert 76fd41e9db as well, leaving that by itself is crashing the Cycles tests.

This issue was referenced by 0e37d3efc0

This issue was referenced by 0e37d3efc017151309b272e4562edd901bfbde7a
Thomas Dinges added this to the 2.92 milestone 2023-02-08 16:14:51 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
15 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#84717
No description provided.